--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This is a database, and a bot, designed to catch-out rouge IRC bots (channel loggers, etc.).
+This is a database, and a bot, designed to catch-out rouge IRC bots (unauthorized channel loggers, etc.).
